adding swag docs
