# routes/routes.go
@@ -34,10 +34,10 @@ func RegisterRoutes(router *http.ServeMux) {
 	router.HandleFunc("GET /renew-access-token", controller.RenewAccessToken)
 
 	// user routes
-	router.HandleFunc("PATCH /user", middlewares.Authenticate(controller.UpdateUserDetails))
+	router.HandleFunc("PUT /user", middlewares.Authenticate(controller.UpdateUserDetails))
 	router.HandleFunc("DELETE /user", middlewares.Authenticate(controller.DeleteUser))
 	router.HandleFunc("POST /user/address", middlewares.Authenticate(controller.AddAddress))
-	router.HandleFunc("PATCH /user/address/{addressId}", middlewares.Authenticate(controller.UpdateAddress))
+	router.HandleFunc("PUT /user/address/{addressId}", middlewares.Authenticate(controller.UpdateAddress))
 	router.HandleFunc("DELETE /user/address/{addressId}", middlewares.Authenticate(controller.DeleteAddress))
 	router.HandleFunc("GET /user/addresses", middlewares.Authenticate(controller.GetAddresses))
 
@@ -48,7 +48,7 @@ func RegisterRoutes(router *http.ServeMux) {
 	router.HandleFunc("DELETE /favorite/product/{productId}", middlewares.Authenticate(controller.UnMarkFavorite))
 	router.HandleFunc("GET /favorite/products", middlewares.Authenticate(controller.GetFavorites))
 	router.HandleFunc("POST /review/product/{productId}", middlewares.Authenticate(controller.AddProductReview))
-	router.HandleFunc("PATCH /review/product/{reviewId}", middlewares.Authenticate(controller.UpdateProductReview))
+	router.HandleFunc("PUT /review/product/{reviewId}", middlewares.Authenticate(controller.UpdateProductReview))
 	router.HandleFunc("DELETE /review/product/{reviewId}", middlewares.Authenticate(controller.DeleteProductReview))
 	router.HandleFunc("GET /product/{productId}/reviews", controller.GetProductReviewsByProductId)
 
@@ -56,7 +56,7 @@ func RegisterRoutes(router *http.ServeMux) {
 	router.HandleFunc("GET /cart", middlewares.Authenticate(controller.GetCart))
 	router.HandleFunc("POST /cart/product/{productId}", middlewares.Authenticate(controller.AddToCart))
 	router.HandleFunc("DELETE /cart/product/{productId}", middlewares.Authenticate(controller.RemoveFromCart))
-	router.HandleFunc("PATCH /cart/product/{productId}", middlewares.Authenticate(controller.UpdateCartItems))
+	router.HandleFunc("PUT /cart/product/{productId}", middlewares.Authenticate(controller.UpdateCartItems))
 
 	// order routes
 	router.HandleFunc("POST /order", middlewares.Authenticate(controller.PlaceOrder))
